[gd_scene load_steps=4 format=3 uid="uid://c57tj541b5es0"]

[ext_resource type="Script" path="res://Scenes/mob_behavior_state_machine.gd" id="1_rqux3"]
[ext_resource type="PackedScene" uid="uid://dd341ipqfu76o" path="res://Scenes/BehaviorState.tscn" id="2_7e8d3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wngit"]

[node name="MobBehaviorStateMachine" type="Node2D"]
script = ExtResource("1_rqux3")
metadata/_edit_group_ = true

[node name="BehaviorState" parent="." instance=ExtResource("2_7e8d3")]

[node name="ExploreRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExploreRange"]
scale = Vector2(20, 20)
shape = SubResource("CircleShape2D_wngit")
debug_color = Color(0, 0.634636, 0.426719, 0.42)

[node name="FollowRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowRange"]
scale = Vector2(12, 12)
shape = SubResource("CircleShape2D_wngit")
debug_color = Color(0.56171, 0.548311, 0.317484, 0.42)

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_wngit")
debug_color = Color(0.987655, 0, 0.310664, 0.42)

[connection signal="behavior_ended" from="BehaviorState" to="." method="_on_behavior_state_behavior_ended"]
[connection signal="body_entered" from="ExploreRange" to="." method="_on_explore_range_body_entered"]
[connection signal="body_exited" from="ExploreRange" to="." method="_on_explore_range_body_exited"]
[connection signal="body_entered" from="FollowRange" to="." method="_on_follow_range_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
